--- a/Resources/translations/relative-date.pl.yml
+++ b/Resources/translations/relative-date.pl.yml
@@ -1,7 +1,7 @@
-"[X] seconds ago": "]0, 10]parę sekund temu|%count sekund temu"
+"[X] seconds ago": "]0, 10]parę sekund temu|parę sekund temu|%count sekundy temu|%count sekund temu"
 "[X] minutes ago": "minutę temu|%count minuty temu|%count minut temu"
 "[X] hours ago": "godzinę temu|%count godziny temu|%count godzin temu"
-"[X] days ago": "wczoraj|%count dni temu|%count dni temu"
+"[X] days ago": "{2} przedwczoraj|wczoraj|%count dni temu|%count dni temu"
 "[X] weeks ago": "tydzień temu|%count tygodnie temu|%count tygodni temu"
 "[X] months ago": "miesiąc temu|%count miesiące temu|%count miesięcy temu"
 "yesterday": "wczoraj"
